--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1151,6 +1151,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/qDDKs2ZxcJVwKrjrbyIpVA" target="_blank">综述：PyTorch显存机制分析</a>
     |
+    <a href="https://mp.weixin.qq.com/s/ZtrkfdYUpWdpXTGONuniDQ" target="_blank">Pytorch显存分配机制与显存占用分析方法</a>
+    |
     <a href="https://mp.weixin.qq.com/s/GZ_QBPF9iZt_QbziS95WWQ" target="_blank">实践教程｜PyTorch训练加速技巧</a>
     |
     <a href="https://mp.weixin.qq.com/s/nPj8ID7DhZpAvkM4QxWHcg" target="_blank">Pytorch Lightning 完全攻略</a>
