--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1806,6 +1806,13 @@ AI/NLP in Education Field：
     |    
   <br />
   <br />
+Interpretability DL/AI Field：
+<br />
+<!-- University of Washington -->
+    <a href="https://bhargaviparanjape.github.io/" target="_blank">Bhargavi Paranjape</a>
+    |    
+  <br />
+  <br />
 KG in the Energy Field：
 <br />
     <a href="https://scholar.google.com/citations?user=nOMt_KkAAAAJ" target="_blank">Yuntian Chen [<a href="https://mp.weixin.qq.com/s/kHdxy5noz4g_tqHM7doauQ" target="_blank">Recruitment Info</a>]</a>
