--- a/pages/activities.html
+++ b/pages/activities.html
@@ -176,9 +176,11 @@
 
     <li><strong>Invited Reviewer</strong>, Entropy (<a href="https://www.mdpi.com/journal/entropy"><strong><u><font color="#874e26">Entropy</font></u></strong></a>)</li>
 
-
    
     <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.journals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
+
+
+    <li><strong>Invited Reviewer</strong>, Data and Information Management (<a href="https://www.journals.elsevier.com/data-and-information-management"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
 
 
     <li><strong>Invited Reviewer</strong>, Pattern Recognition Letters (<a href="https://www.journals.elsevier.com/pattern-recognition-letters/"><strong><u><font color="#874e26">PR Letters</font></u></strong></a>)</li>
