--- a/pages/activities.html
+++ b/pages/activities.html
@@ -171,22 +171,26 @@
     </li>
 
 
-    <li><strong>Invited Reviewer</strong>, Applied Sciences (<a href="https://www.mdpi.com/journal/applsci"><strong><u><font color="#874e26">AS</font></u></strong></a>)</li>
-
-
-    <li><strong>Invited Reviewer</strong>, Entropy (<a href="https://www.mdpi.com/journal/entropy"><strong><u><font color="#874e26">Entropy</font></u></strong></a>)</li>
+    <li><strong>Invited Reviewer</strong>, CAAI Transactions on Intelligence Technology (<a href="https://ietresearch.onlinelibrary.wiley.com/journal/24682322"><strong><u><font color="#874e26">CAAI-TIT</font></u></strong></a>)</li>
 
    
     <li><strong>Invited Reviewer</strong>, Knowledge-Based Systems (<a href="http://www.journals.elsevier.com/"><strong><u><font color="#874e26">KBS</font></u></strong></a>)</li>
-
-
-    <li><strong>Invited Reviewer</strong>, Data and Information Management (<a href="https://www.journals.elsevier.com/data-and-information-management"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
 
 
     <li><strong>Invited Reviewer</strong>, Pattern Recognition Letters (<a href="https://www.journals.elsevier.com/pattern-recognition-letters/"><strong><u><font color="#874e26">PR Letters</font></u></strong></a>)</li>
 
 
     <li><strong>Invited Reviewer</strong>, IEEE Access (<a href="https://ieeeaccess.ieee.org/"><strong><u><font color="#874e26">IEEE Access</font></u></strong></a>)</li>
+
+
+    <li><strong>Invited Reviewer</strong>, Applied Sciences (<a href="https://www.mdpi.com/journal/applsci"><strong><u><font color="#874e26">AS</font></u></strong></a>)</li>
+
+
+    <li><strong>Invited Reviewer</strong>, Entropy (<a href="https://www.mdpi.com/journal/entropy"><strong><u><font color="#874e26">Entropy</font></u></strong></a>)</li>
+
+
+    <li><strong>Invited Reviewer</strong>, Data and Information Management (<a href="https://www.journals.elsevier.com/data-and-information-management"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
+
 
 
     <!-- \item {计算机研究与发展}  -->
