--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -501,6 +501,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/vJdr3bBrac76q_FF9WOduQ" target="_blank">结合NAACL2022经历看NLP研究热点</a>
     |
+    <a href="https://mp.weixin.qq.com/s/6oVH5bWFTPuKebTx7GuLdA" target="_blank">KDD 2022 | 美团技术团队精选论文解读</a>
+    |
 </br>
 </br>
     Knowledge Graphs: 
