--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -75,7 +75,11 @@
 
     <li><strong><font color="#874e26"><a href="http://213.230.96.51:8090/files/ebooks/Matematika/Primiero%20G.%20Information%20and%20knowledge..%20A%20constructive%20type-theoretical%20approach%20(LEUS010,%20Springer,%202008)(ISBN%209781402061691)(220s)%20MPh%20.pdf">Information and Knowledge</a></font></strong></li>
 
-    
+
+    <li><strong><font color="#874e26"><a href="https://pan.baidu.com/s/1wk31_xhRPxU6xYbhR9bX9w?pwd=yr86">Mining Structures of Factual Knowledge from Text [<a href="https://mp.weixin.qq.com/s/egq6vJwpOWZ50bksAMRS2Q" target="_blank">Report</a>]</a></font></strong></li>
+
+
+
     <li><strong><font color="#874e26"><a href="https://pan.baidu.com/s/1566f73ICk5Ug__KD77ZIAQ?pwd=86v7">Massive Graph Analytics [<a href="https://mp.weixin.qq.com/s/Hpx_mpjzTu_e5AWCVJyP4A" target="_blank">Report</a>]</a></font></strong></li>
 
 
