--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1475,7 +1475,7 @@
   <!-- Peking university -->
     <a href="http://eecs.pku.edu.cn/info/1501/6752.htm" target="_blank">Zhifang Sui</a>
     |
-    <a href="http://ruiyan.me/" target="_blank">Rui Yan</a>
+    <a href="https://gsai.ruc.edu.cn/addons/teacher/index/info.html?user_id=0&ruccode=20200243&ln=en" target="_blank">Rui Yan</a>
     |
     <a href="https://www.wict.pku.edu.cn/huwei/" target="_blank">Wei Hu</a>
     |
