--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1880,6 +1880,9 @@ Database Field：
     <a href="https://siqiangluo.wixsite.com/homepage" target="_blank">Siqiang Luo</a>
     |
     <a href="https://www1.se.cuhk.edu.hk/~swang/" target="_blank">Sibo Wang</a>
+    |
+<!--  Beijing Institute of Technology -->
+    <a href="https://ronghuali.github.io/" target="_blank">Ronghua Li</a>
     |        
   <br />
   <br />
