--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1856,6 +1856,8 @@ Data mining Field：
 <br />
     <a href="https://xiangzhang.info/index.html" target="_blank">Xiang Zhang</a>
     |
+    <a href="http://leibai.site/" target="_blank">Lei Bai</a>
+    |
 <!-- Chongqing University -->
     <a href="http://www.ccee.cqu.edu.cn/info/1016/1585.htm" target="_blank">Lei Zhang</a>
     |    
