--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1928,6 +1928,12 @@ Geographic Information Systems Field：
     |
   <br />
   <br />
+Medical Image Analysis
+<br />
+    <a href="https://xmengli.github.io/" target="_blank">Xiaomeng Li</a>
+    |
+  <br />
+  <br />
 Internet-of-Things Field：
 <br />
     <a href="https://www.eee.hku.hk/people/echngai/" target="_blank">Edith C.H. Ngai</a>
