--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -509,6 +509,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/6oVH5bWFTPuKebTx7GuLdA" target="_blank">KDD 2022 | 美团技术团队精选论文解读</a>
     |
+    <a href="https://mp.weixin.qq.com/s/s4uNVgmPVaeb0j7wcu-LcA" target="_blank">忆海原识发布类脑计算平台，下一代AI突破口到来！</a>
+    |
 </br>
 </br>
     Knowledge Graphs: 
