--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1186,7 +1186,9 @@
     <a href="https://mp.weixin.qq.com/s/yGM0gzHxAPdMPSEhUtR3QQ" target="_blank">PyTorch常用代码段合集</a>
     |
     <a href="https://mp.weixin.qq.com/s/l-GK1ZX_M1cg_rejLZu25Q" target="_blank">Pytorch - 弹性训练原理分析</a>
-    |                    
+    |
+    <a href="https://mp.weixin.qq.com/s/YWGPLlUAykrGomuHKTftpg" target="_blank">一文浅谈Transforme性能优化的常见方法</a>
+    |                      
 <!--   <br /> -->
 
 <br />
