--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1834,6 +1834,13 @@ Interpretability DL/AI Field：
     |    
   <br />
   <br />
+KG in the Agriculture Field：
+<br />
+<!-- 华中农业大学 -->
+    <a href="http://coi.hzau.edu.cn/info/1122/6168.htm" target="_blank">Zaiwen Feng</a>
+    |
+  <br />
+  <br />
 KG in the Energy Field：
 <br />
     <a href="https://scholar.google.com/citations?user=nOMt_KkAAAAJ" target="_blank">Yuntian Chen [<a href="https://mp.weixin.qq.com/s/kHdxy5noz4g_tqHM7doauQ" target="_blank">Recruitment Info</a>]</a>
