--- a/pages/publications.html
+++ b/pages/publications.html
@@ -82,16 +82,18 @@
 <h4>2022</h4>
 <ol start="1">
     <li><strong><font color="#0076ff">Yongpan Sheng</font></strong>, <strong><font color= "#00066f">A syntactic-based model for open relation extraction</font></strong></a>. Computer Science (<a href="http://www.jsjkx.com/CN/1002-137X/home.shtml"><strong><u><font color="#874e26">Computer Science</font></u></strong></a>). (In Chinese) (To be Submitted)</li>
+    
 
+
+    <li> <strong><a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <font color="#0076ff">Yongpan Sheng</font></strong>*, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, and <a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. (Under Review)</li>
+<!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li> 
+ -->
 </ol>
 
 
 <!-- 2021 year -->
 <h4>2021</h4>
 <ol start="1">
-    <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://dblp.uni-trier.de/pers/hd/z/Zhang:Hekai" target="_blank">Hekai Zhang</a>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="http://www.cse.cqu.edu.cn/info/2097/5778.htm" target="_blank">Meng Chen</a>, and <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, <a href="#"><strong><font color= "#00066f">Semantic-Path Guided Graph Neural Network for Heterogeneous Graph Embedding</font></strong></a>. (Under Review)</li>
-<!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (To be Submitted)</li> 
- -->
 
     <li> <strong><font color="#0076ff">Yongpan Sheng</font></strong>, <a href="https://lironghuo.github.io/" target="_blank">Lirong He</a>, <a href="https://cfm.uestc.edu.cn/~shaojie/" target="_blank">Jie Shao</a>, and <a href="https://wilburone.github.io/index.html" target="_blank">Fuli Huang</a>*, <a href="#"><strong><font color= "#00066f">A Short Survey on Open Relation Extraction from Text Corpora: Recent Advances, Resources and Perspective</font></strong></a>. (Under Review)</li>
 <!-- The 25th Pacific-Asia Conference on Knowledge Discovery and Data Mining (<a href="https://pakdd2021.org/"><strong><u><font color="#874e26">PAKDD-21</font></u></strong></a>). Delhi, India, May 11-14 2021 (Under Review)</li> 
