--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1878,6 +1878,9 @@ Data mining Field：
     |
     <a href="http://leibai.site/" target="_blank">Lei Bai</a>
     |
+<!-- Sichuan University -->
+    <a href="https://huangsd.github.io/" target="_blank">Shudong Huang</a>
+    |  
 <!-- Chongqing University -->
     <a href="http://www.ccee.cqu.edu.cn/info/1016/1585.htm" target="_blank">Lei Zhang</a>
     |    
