--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -239,6 +239,8 @@
 
 
 <h4>2022</h4>
+    <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
+    |    
     <a href="https://icml.cc/Conferences/2022/AcceptedPapersInitial" target="_blank">ICML</a>
     |
     <a href="https://infocom2022.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
