--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1776,6 +1776,8 @@ NLP/KG Field：
     |
     <a href="https://galina0217.github.io/" target="_blank">Jiarong Xu</a>
     |
+    <a href="https://cst.dhu.edu.cn/35/45/c3133a210245/page.psp" target="_blank">Bo Xu</a>
+    |
 <!-- Southeast University-->
     <a href="http://seu.wangmengsd.com/" target="_blank">Meng Wang</a>
     |
