--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1732,6 +1732,9 @@ NLP/KG Field：
     |
     <a href="https://leuchine.github.io/" target="_blank">Qi Liu</a>
     |
+<!-- Tsinghua University -->
+    <a href="http://web.ee.tsinghua.edu.cn/zhoubowen/zh_CN/index.htm" target="_blank">Bowen Zhou</a>
+    |
 <!-- Peking University -->
 <!--     <a href="https://wanxiaojun.github.io/" target="_blank">Xiaojun Wan</a>
     | -->
