--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -176,6 +176,9 @@
 <h4>2023</h4>
     <a href="https://infocom2023.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
+<!-- Knowledge engineering -->
+    <a href="https://2023.aclweb.org/" target="_blank">ACL</a>
+    |
     <a href="https://icdcs2023.icdcs.org/" target="_blank">ICDCS</a>
     |
     <a href="https://icde2023.ics.uci.edu/" target="_blank">ICDE</a>
