--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1312,6 +1312,24 @@
 <br />
 <br />
 
+
+<!--  -->
+
+<hr align="left" width="100%">
+
+<h3 style="
+    color: #0084f2;
+    padding-left: 5px;
+    margin: 30px 0 5px;
+    border-left: 5px solid #0084f2;">Code Understanding and Computation</h3>
+
+<br />
+    <a href="https://mp.weixin.qq.com/s/1tGIZoIf7K-MA0vloenPzg" target="_blank">是成就还是削弱？AI代码生成工具与程序员的「相爱相杀」</a>
+
+<br />
+<br />
+
+
 <!--  -->
 <hr align="left" width="100%">
 
