--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -227,7 +227,7 @@
     |
     <a href="https://2023.ijcnn.org/" target="_blank">IJCNN</a>
     |
-    <a href="#" target="_blank">PAKDD</a>
+    <a href="http://pakdd2023.org/" target="_blank">PAKDD</a>
     |
     <a href="https://ecir2023.org/index.html" target="_blank">ECIR</a>
     |
