--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1861,6 +1861,13 @@ NLP/KG Field：
     |
   <br />
   <br />
+Commonsense Knowledge Field：
+<br />
+<!-- HKUST -->
+    <a href="http://fangtq.com/" target="_blank">Tianqing Fang</a>
+    |
+  <br />
+  <br />
 AI/NLP in Education Field：
 <br />
     <a href="https://angusglchen.github.io/" target="_blank">Guanliang Chen</a>
