--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -528,6 +528,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/s4uNVgmPVaeb0j7wcu-LcA" target="_blank">忆海原识发布类脑计算平台，下一代AI突破口到来！</a>
     |
+    <a href="https://mp.weixin.qq.com/s/dva18S0eHDUJ1HR7NKk4jg" target="_blank">172篇 | COLING 2022论文集</a>
+    |
 </br>
 </br>
     Knowledge Graphs: 
