--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -233,6 +233,16 @@
     |
     <a href="http://www.ieee-smart-world.org/2022/uic/cfp.php" target="_blank">UIC</a>
     |
+    <a href="" target="_blank">NLPCC</a>
+    |
+    <a href="" target="_blank">ICONIP</a>
+    |
+    <a href="http://43.154.143.126/" target="_blank">KSEM</a>
+    |
+    <a href="" target="_blank">ESWC</a> (<a href="" target="_blank">GeoLD2022</a>)
+    |
+    <a href="" target="_blank">PRICAI</a>
+    |   
 <!-- SE - C-->
     <a href="#" target="_blank">APSEC</a>
     |
