--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1767,6 +1767,8 @@ NLP/KG Field：
     |
     <a href="https://profiles.uts.edu.au/Min.Xu/about" target="_blank">Min Xu</a>
     |
+    <a href="https://users.monash.edu/~yli/" target="_blank">Yuanfang Li</a>
+    |
 <!-- Singapore -->
     <a href="https://siqiangluo.wixsite.com/homepage" target="_blank">Siqiang Luo</a>
     |
