--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -239,7 +239,7 @@
     |
     <a href="http://43.154.143.126/" target="_blank">KSEM</a>
     |
-    <a href="" target="_blank">ESWC</a> (<a href="" target="_blank">GeoLD2022</a>)
+    <a href="https://2023.eswc-conferences.org/call-for-contributions-eswc-2023/" target="_blank">ESWC</a> (<a href="" target="_blank">GeoLD2022</a>)
     |
     <a href="" target="_blank">PRICAI</a>
     |   
