--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -252,6 +252,9 @@
     |
     <a href="https://www.icwe2023.com/" target="_blank">ICWE</a>
     |
+<!-- others -->
+    <a href="https://www.icwsm.org/2023/index.html/index.html#intro" target="_blank">ICWSM</a>
+    |
     <br/>
 
 
