--- a/pages/activities.html
+++ b/pages/activities.html
@@ -106,6 +106,12 @@
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
 
+    <li><strong>Invited Reviewer</strong>, The 28th International Conference on Database Systems for Advanced Applications (<a href="http://www.tjudb.cn/dasfaa2023/"><strong><u><font color="#874e26">DASFAA 2023</font></u></strong></a>), Tianjin, China, April 17-20, 2023</li>
+
+    
+    <li><strong>Invited Reviewer</strong>, The 7th International Workshop on Graph Data Management and Analysis (<a href="https://gdma2023.github.io/index.html"><strong><u><font color="#874e26">GDMA 2023</font></u></strong></a>), Tianjin, China, April 17-20, 2023</li>
+
+
     <li><strong>Invited Reviewer</strong>, The 21st China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2022/index.html"><strong><u><font color="#874e26">CCL 2022</font></u></strong></a>), Nanchang, China, October 14-16, 2022</li>
 
 
