--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -551,6 +551,12 @@
     | 
 </br>
 </br>
+    Deep Learning: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/JECV2IBtJYVCMeiez3nBdg" target="_blank">今年的海德堡论坛，Raj Reddy、Sanjeev Arora、LeCun 与 Bengio 都讲了些什么？</a>
+    | 
+</br>
+</br>
     Databases: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/DaqGAiCMcPTQjHTYbcHhOA" target="_blank">7 Papers & Radios | 国产数据库入选顶会VLDB 2022；一句话生成高清360度场景和光照</a>
