--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -221,7 +221,7 @@
     |
     <a href="" target="_blank">CIKM</a>
     |
-    <a href="https://2022.ieeeicme.org/" target="_blank">ICME</a>
+    <a href="https://www.2023.ieeeicme.org/index.php" target="_blank">ICME</a>
     |
     <a href="https://icmr2023.org/" target="_blank">ICMR</a>
     |
