--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -217,6 +217,9 @@
     |
     <a href="https://2023.ieeeicassp.org/welcome-message/" target="_blank">ICASSP</a>
     |
+<!-- semantic web - B-->
+    <a href="https://iswc2023.semanticweb.org/" target="_blank">ISWC</a>
+    |
     <a href="https://2023.ecmlpkdd.org/" target="_blank">ECML-PKDD</a>
     |
     <a href="" target="_blank">CIKM</a>
@@ -1888,6 +1891,13 @@ NLP/KG Field：
 <!-- 360 -->
     <a href="https://liuhuanyong.github.io/" target="_blank">Huanyong Liu</a>
     |
+  <br />
+  <br />
+NLP Field：
+<br />
+<!-- Southern University of Science and Technology (SUSTech) -->
+    <a href="https://ghchen.me/" target="_blank">Guanhua Chen</a>
+    |    
   <br />
   <br />
 Commonsense Knowledge Field：
