--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -548,6 +548,12 @@
     |
 </br>
 </br>
+AI Big Model: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/LkGJN7UIpc1NlMvGHXxPig" target="_blank">AI 大模型最新突破：帮科学家读论文，小菜一碟</a>
+    |
+</br>
+</br>
     Knowledge Graphs: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/x-IlFB-KwS79bFQGsH1YeA" target="_blank">先锋洞见 | 陈华钧：从六大趋势看知识图谱的进阶发展</a>
