--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -552,6 +552,8 @@ AI Big Model:
 </br>    
     <a href="https://mp.weixin.qq.com/s/LkGJN7UIpc1NlMvGHXxPig" target="_blank">AI 大模型最新突破：帮科学家读论文，小菜一碟</a>
     |
+    <a href="https://mp.weixin.qq.com/s/DB6w-lEod545eF24XUbzFg" target="_blank">大模型“研究源”告急：研究预测，2026年高质量语言数据将耗尽</a>
+    |
 </br>
 </br>
     Knowledge Graphs: 
