--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -176,7 +176,7 @@
 <h4>2023</h4>
     <a href="https://infocom2023.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
-<!-- Knowledge engineering -->
+<!-- Knowledge engineering - A-->
     <a href="https://2023.aclweb.org/" target="_blank">ACL</a>
     |
     <a href="https://icdcs2023.icdcs.org/" target="_blank">ICDCS</a>
@@ -186,6 +186,11 @@
     <a href="https://2023.sigmod.org/index.shtml" target="_blank">ACM SIGMOD</a>
     |
     <a href="https://www.vldb.org/2023/?call-for-research-track" target="_blank">VLDB</a>
+    |
+<!-- hybrid - A-->
+    <a href="https://ijcai-22.org/" target="_blank">IJCAI</a>
+    |
+    <a href="https://2022.acmmm.org/" target="_blank">ACMM</a>
     |
 <!-- software engineering - A-->
     <a href="#" target="_blank">ASE</a>
@@ -218,6 +223,8 @@
     <a href="https://2023.ieeeicassp.org/welcome-message/" target="_blank">ICASSP</a>
     |
 <!-- semantic web - B-->
+    <a href="" target="_blank">EMNLP</a>
+    |   
     <a href="https://iswc2023.semanticweb.org/" target="_blank">ISWC</a>
     |
     <a href="https://2023.ecmlpkdd.org/" target="_blank">ECML-PKDD</a>
@@ -259,7 +266,8 @@
     <a href="https://www.icwsm.org/2023/index.html/index.html#intro" target="_blank">ICWSM</a>
     |
     <br/>
-
+    <a href="https://mp.weixin.qq.com/s/uQubfUy7pGMLeCQKgqB6Bw" target="_blank">Gartner发布：2023年十大重要技术趋势</a>
+    |
 
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
