--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -748,6 +748,8 @@ AI Big Model:
     |
     <a href="https://mp.weixin.qq.com/s/jpy7Ql6DDCf5zc4RE3melw" target="_blank">WWW2021 | 图机器学习论文一览</a>
     |
+    <a href="https://mp.weixin.qq.com/s/6BFz0mWpS19hgIm8Ll2drQ" target="_blank">2022年，图机器学习Graph ML发展到哪了？</a>
+    |
     <a href="https://mp.weixin.qq.com/s/FzyJoeYME2BBmLyHgnCtmg" target="_blank">SIGIR 2021 | 推荐系统相关论文分类整理</a>
 <!--     <br />
     <br /> -->
