--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1145,6 +1145,8 @@ AI Big Model:
 
     <a href="https://mp.weixin.qq.com/s/hAlU2WMUzs6ehiQgiyZgNA" target="_blank">实操教程｜PyTorch自定义CUDA算子教程与运行时间分析</a>
     |
+    <a href="https://sherlcok314159.github.io/posts/Diving-in-distributed-training/" target="_blank">pytorch从原理到代码的多卡教程</a>
+    |
 <!--   <br /> -->
 
 <br />
