--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -268,6 +268,8 @@
     <br/>
     <a href="https://mp.weixin.qq.com/s/uQubfUy7pGMLeCQKgqB6Bw" target="_blank">Gartner发布：2023年十大重要技术趋势</a>
     |
+    <a href="https://mp.weixin.qq.com/s/I6L6rBhCGLwoFKfS-dbD8A" target="_blank">清华青年最关注的改变未来十大变革科技</a>
+    |
 
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
@@ -1602,6 +1604,9 @@ AI Big Model:
     |
   <!-- 天津大学 -->
     <a href="http://www.tjudb.cn/dbgroup/Xin_Wang_zh#.E5.AD.A6.E6.9C.AF.E8.AE.BA.E6.96.87" target="_blank">Xin Wang</a>
+    |
+  <!-- Tongji University -->
+    <a href="https://tjdi.tongji.edu.cn/TeacherDetail.do?id=4991&lang=_en" target="_blank">Haofen Wang</a>
     |
 <!--  <br /> -->
     <a href="http://cic.tju.edu.cn/faculty/zhangxiaowang/index.htm" target="_blank">Xiaowang Zhang</a>
