--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1786,6 +1786,9 @@ NLP/KG Field：
 <!-- UC Santa Barbara (UCSB) -->
     <a href="https://jingjingxu.com/#about" target="_blank">Jingjing Xu</a>
     |
+<!-- Emory University, Atlanta -->
+    <a href="https://www.cs.emory.edu/~fliu40/" target="_blank">Fei Liu</a>
+    |
 <!-- UK -->
     <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/" target="_blank">Jiaoyan Chen</a>
     |
