--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1149,6 +1149,8 @@ AI Big Model:
     |
     <a href="https://sherlcok314159.github.io/posts/Diving-in-distributed-training/" target="_blank">pytorch从原理到代码的多卡教程</a>
     |
+    <a href="https://mp.weixin.qq.com/s/OW6tRKUGQtilEAJRMwd4Jw" target="_blank">图神经网络框架-PyTorch Geometric(PyG)的使用及踩坑</a>
+    |
 <!--   <br /> -->
 
 <br />
