--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://mp.weixin.qq.com/s/HHKK3Gibxafv_OFsGXpBaQ" target="_blank">2022年分区表 | 大小类设置和期刊调整</a>
   |
+  <a href="https://www.ccf.org.cn/Academic_Evaluation/By_category/" target="_blank">中国计算机学会推荐国际学术会议和期刊目录-2022 (拟定)</a>
+  |
   <a href="https://www.ccf.org.cn/c/2019-04-25/663625.shtml" target="_blank">中国计算机学会推荐国际学术会议和期刊目录 (2019年发布)</a>
 <!--  <br /> -->
   |
