--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1151,6 +1151,8 @@ AI Big Model:
     |
     <a href="https://mp.weixin.qq.com/s/OW6tRKUGQtilEAJRMwd4Jw" target="_blank">图神经网络框架-PyTorch Geometric(PyG)的使用及踩坑</a>
     |
+    <a href="https://mp.weixin.qq.com/s/9epR_MhHTdy3H1Qavtsmqg" target="_blank">终结1.x时代，PyTorch 2.0来了！100%向后兼容，一行代码将训练提速76%</a>
+    |
 <!--   <br /> -->
 
 <br />
