--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -212,6 +212,9 @@
     |
     <a href="" target="_blank">ESEM</a>
     |
+<!-- Service Computing -->
+    <a href="https://conferences.computer.org/icws/2023/" target="_blank">ICWS</a>
+    |
     <a href="" target="_blank">ISSRE</a>
     | 
     <a href="https://conf.researchr.org/home/icpc-2023" target="_blank">ICPC</a>
@@ -246,8 +249,6 @@
     <a href="" target="_blank">NLPCC</a>
     |
     <a href="" target="_blank">ICONIP</a>
-    |
-    <a href="http://43.154.143.126/" target="_blank">KSEM</a>
     |
     <a href="https://2023.eswc-conferences.org/call-for-contributions-eswc-2023/" target="_blank">ESWC</a> (<a href="" target="_blank">GeoLD2022</a>)
     |
