--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -271,6 +271,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/I6L6rBhCGLwoFKfS-dbD8A" target="_blank">清华青年最关注的改变未来十大变革科技</a>
     |
+    <a href="https://mp.weixin.qq.com/s/7sJTh8SiTIaSNInT0TjmGg" target="_blank">字节跳动李航：人工智能需要新的范式和理论</a>
+    |
 
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
