--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -273,7 +273,9 @@
     |
     <a href="https://mp.weixin.qq.com/s/7sJTh8SiTIaSNInT0TjmGg" target="_blank">字节跳动李航：人工智能需要新的范式和理论</a>
     |
-
+    <a href="https://mp.weixin.qq.com/s/dR5ER-kxzYzGaIlUUQMvow" target="_blank">神经符号 AI，或为下一代 AIoT 的新解法</a>
+    |
+    
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
     |    
