--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@ Check out Sheng's up-to-date CV for more details.
   |
   <a href="https://www.ccf.org.cn/Academic_Evaluation/By_category/" target="_blank">中国计算机学会推荐国际学术会议和期刊目录-2022 (拟定)</a>
   |
+  <a href="https://www.cie.org.cn/list_43/11070.html" target="_blank">中国电子学会关于《电子技术、通信技术领域高质量科技期刊分级目录（征求意见稿）》和《计算机技术领域高质量科技期刊分级目录（征求意见稿）》的公示</a>
+  |
   <a href="https://www.ccf.org.cn/c/2019-04-25/663625.shtml" target="_blank">中国计算机学会推荐国际学术会议和期刊目录 (2019年发布)</a>
 <!--  <br /> -->
   |
