--- a/pages/activities.html
+++ b/pages/activities.html
@@ -239,6 +239,10 @@
     <li><strong>Invited Reviewer</strong>, Journal of Communications (<a href="http://www.infocomm-journal.com/txxb/CN/1000-436X/home.shtml"><strong><u><font color="#874e26">JC</font></u></strong></a>)</li>
 
 
+    <!-- \item {电信科学} -->
+    <li><strong>Invited Reviewer</strong>, Telecommunications Science (<a href="http://www.infocomm-journal.com/dxkx/CN/1000-0801/home.shtml"><strong><u><font color="#874e26">JC</font></u></strong></a>)</li>
+
+
     <!-- \item {网络与信息安全学报} -->
     <li><strong>Invited Reviewer</strong>, Chinese Journal of Network and Information Security (<a href="http://www.infocomm-journal.com/cjnis/CN/2096-109X/home.shtml"><strong><u><font color="#874e26">CJNIS</font></u></strong></a>)</li>
 
