--- a/pages/activities.html
+++ b/pages/activities.html
@@ -195,6 +195,9 @@
     <li><strong>Invited Reviewer</strong>, Entropy (<a href="https://www.mdpi.com/journal/entropy"><strong><u><font color="#874e26">Entropy</font></u></strong></a>)</li>
 
 
+    <li><strong>Invited Reviewer</strong>, Sustainability (<a href="https://www.mdpi.com/journal/sustainability"><strong><u><font color="#874e26">Sustainability</font></u></strong></a>)</li>
+
+
     <li><strong>Invited Reviewer</strong>, Data and Information Management (<a href="https://www.journals.elsevier.com/data-and-information-management"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
 
 
