--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -275,7 +275,10 @@
     |
     <a href="https://mp.weixin.qq.com/s/dR5ER-kxzYzGaIlUUQMvow" target="_blank">神经符号 AI，或为下一代 AIoT 的新解法</a>
     |
+    <a href="https://mp.weixin.qq.com/s/dpgqVzV9DZ-vvLfVhV51tQ" target="_blank">Hinton 最新研究：神经网络的未来是前向-前向算法</a>
+    |
     
+       
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
     |    
@@ -1157,6 +1160,8 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s/OW6tRKUGQtilEAJRMwd4Jw" target="_blank">图神经网络框架-PyTorch Geometric(PyG)的使用及踩坑</a>
     |
     <a href="https://mp.weixin.qq.com/s/9epR_MhHTdy3H1Qavtsmqg" target="_blank">终结1.x时代，PyTorch 2.0来了！100%向后兼容，一行代码将训练提速76%</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/2U7Gb-9BGYOOCXqgVb1Ykg" target="_blank">一行代码，炼丹2倍速！PyTorch 2.0惊喜问世，LeCun激情转发</a>
     |
 <!--   <br /> -->
 
