--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -255,6 +255,10 @@
     <a href="" target="_blank">PRICAI</a>
     |   
 <!-- SE - C-->
+<!-- database - C -->
+    <a href="https://www.dexa.org/dexa2023" target="_blank">DEXA</a>
+    |
+<!-- software engineering - C-->     
     <a href="#" target="_blank">APSEC</a>
     |
     <a href="#" target="_blank">MSR</a>
