--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -281,7 +281,8 @@
     |
     <a href="https://mp.weixin.qq.com/s/dpgqVzV9DZ-vvLfVhV51tQ" target="_blank">Hinton 最新研究：神经网络的未来是前向-前向算法</a>
     |
-    
+    <a href="https://mp.weixin.qq.com/s/kCJekYPiTIu3s5eB7UXAlw" target="_blank">2023年及未来五大技术趋势预测</a>
+    |    
        
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
