--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -270,6 +270,12 @@
 <!-- others -->
     <a href="https://www.icwsm.org/2023/index.html/index.html#intro" target="_blank">ICWSM</a>
     |
+    <a href="https://conf.ccf.org.cn/web/html7/HYDT2.html?channelId=8a9e362c84e695e50184e6eff1030000&globalId=m1049400089711349760167023807829" target="_blank">ChinaMM</a>
+    |
+    <a href="#" target="_blank">ChinaSoft</a>
+    |
+    <a href="#" target="_blank">ChinaService</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/uQubfUy7pGMLeCQKgqB6Bw" target="_blank">Gartner发布：2023年十大重要技术趋势</a>
     |
@@ -1318,6 +1324,8 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s/zo4HivNRx7u73aDKfIwuoQ" target="_blank">60 个神级 VS Code 插件！</a>
     |
     <a href="https://mp.weixin.qq.com/s/en-A4IWd7BfKgqqF0qtoBg" target="_blank">太赞了！Python 开发神器Jupyter竟然还有可视化debug功能！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/BZmvqOxi5Gb454aiwSrxgA" target="_blank">这篇罕见的符号编程论文，让你在Jupyter Notebook中手绘草图并变成代码</a>
     |
 <!--   <br /> -->
 
