--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -1968,6 +1968,13 @@ AI/NLP in Education Field：
     |    
   <br />
   <br />
+Trustworthy AI/ML Field：
+<br />
+<!-- UIUC -->
+    <a href="https://haohanwang.github.io/index.html" target="_blank">Haohan Wang</a>
+    |    
+  <br />
+  <br />
 Interpretability DL/AI Field：
 <br />
 <!-- University of Washington -->
