--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -289,7 +289,9 @@
     |
     <a href="https://mp.weixin.qq.com/s/kCJekYPiTIu3s5eB7UXAlw" target="_blank">2023年及未来五大技术趋势预测</a>
     |    
-       
+    <a href="https://mp.weixin.qq.com/s/dgDDSvCQBoRry0Rb9q9bww" target="_blank">年度汇总！一文了解2021 IEEE Transaction Winner奖19篇论文</a>
+    | 
+
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
     |    
