--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -291,7 +291,14 @@
     |    
     <a href="https://mp.weixin.qq.com/s/dgDDSvCQBoRry0Rb9q9bww" target="_blank">年度汇总！一文了解2021 IEEE Transaction Winner奖19篇论文</a>
     | 
-
+</br>
+</br>
+Code Understanding: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/kQ3ARDM06mKnYdzEwuzVLg" target="_blank">代码表征预训练语言模型学习指南：原理、分析和代码</a>
+    |
+</br>
+</br>
 <h4>2022</h4>
     <a href="https://nips.cc/Conferences/2022/Schedule?type=Poster" target="_blank">NeurIPS</a>
     |    
