--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -255,6 +255,8 @@
     <a href="" target="_blank">PRICAI</a>
     |   
 <!-- SE - C-->
+    <a href="http://ksiresearch.org/seke/seke23.html" target="_blank">SEKE</a>
+    |
 <!-- database - C -->
     <a href="https://www.dexa.org/dexa2023" target="_blank">DEXA</a>
     |
