--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -292,7 +292,9 @@
     <a href="https://mp.weixin.qq.com/s/kCJekYPiTIu3s5eB7UXAlw" target="_blank">2023年及未来五大技术趋势预测</a>
     |    
     <a href="https://mp.weixin.qq.com/s/dgDDSvCQBoRry0Rb9q9bww" target="_blank">年度汇总！一文了解2021 IEEE Transaction Winner奖19篇论文</a>
-    | 
+    |
+    <a href="http://www.casisd.cn/zkcg/zxcg/202212/P020221227317598213068.pdf" target="_blank">中科院发布《2022研究前沿》报告</a>
+    |  
 </br>
 </br>
 Code Understanding: 
