--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -246,13 +246,17 @@
     |
     <a href="http://www.ieee-smart-world.org/2022/uic/cfp.php" target="_blank">UIC</a>
     |
+<!-- NLP - C-->    
     <a href="" target="_blank">NLPCC</a>
     |
-    <a href="" target="_blank">ICONIP</a>
+<!-- Neural network - C--> 
+    <a href="http://www.iconip2023.org/index.html" target="_blank">ICONIP</a>
+    |
+    <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
     |
     <a href="https://2023.eswc-conferences.org/call-for-contributions-eswc-2023/" target="_blank">ESWC</a> (<a href="" target="_blank">GeoLD2022</a>)
     |
-    <a href="" target="_blank">PRICAI</a>
+    <a href="https://pricai.org/2023/" target="_blank">PRICAI</a>
     |   
 <!-- SE - C-->
     <a href="http://ksiresearch.org/seke/seke23.html" target="_blank">SEKE</a>
