--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -278,6 +278,9 @@
 <!-- others -->
     <a href="https://www.icwsm.org/2023/index.html/index.html#intro" target="_blank">ICWSM</a>
     |
+<!-- software engineering - others -->
+    <a href="https://conferences.computer.org/sse/2023/cfp/" target="_blank">SSE</a>
+    |
     <a href="https://conf.ccf.org.cn/web/html7/HYDT2.html?channelId=8a9e362c84e695e50184e6eff1030000&globalId=m1049400089711349760167023807829" target="_blank">ChinaMM</a>
     |
     <a href="#" target="_blank">ChinaSoft</a>
