--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -303,12 +303,18 @@
     <a href="https://mp.weixin.qq.com/s/dgDDSvCQBoRry0Rb9q9bww" target="_blank">年度汇总！一文了解2021 IEEE Transaction Winner奖19篇论文</a>
     |
     <a href="http://www.casisd.cn/zkcg/zxcg/202212/P020221227317598213068.pdf" target="_blank">中科院发布《2022研究前沿》报告</a>
-    |  
+    | 
 </br>
 </br>
 Code Understanding: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/kQ3ARDM06mKnYdzEwuzVLg" target="_blank">代码表征预训练语言模型学习指南：原理、分析和代码</a>
+    |
+</br>
+</br>
+懂理性的AI Models: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/S77fj9loSKFhHcAiWgxKrg" target="_blank">2023将至，Bengio等大佬年度展望！懂理性的AI模型要来了？</a>
     |
 </br>
 </br>
