--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -304,6 +304,8 @@
     |
     <a href="http://www.casisd.cn/zkcg/zxcg/202212/P020221227317598213068.pdf" target="_blank">中科院发布《2022研究前沿》报告</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/a8zNkwWD2Pu9wJ_2hB1qyQ" target="_blank">Nature发布2023年值得关注的9个科学大事件，新型疫苗位列榜首</a>
+    | 
 </br>
 </br>
 Code Understanding: 
