--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -287,6 +287,8 @@
     |
     <a href="#" target="_blank">ChinaService</a>
     |
+    <a href="#" target="_blank">ChineseCSCW</a>
+    |
     <br/>
     <a href="https://mp.weixin.qq.com/s/uQubfUy7pGMLeCQKgqB6Bw" target="_blank">Gartner发布：2023年十大重要技术趋势</a>
     |
@@ -484,7 +486,7 @@ Code Understanding:
     |
     <a href="http://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
     |
-    <a href="#" target="_blank">ChinaService</a>
+    <a href="https://conf.ccf.org.cn/web/api/m9644563065535242241649985902214.action" target="_blank">ChinaService</a>
     |
     <a href="https://conf.scholat.com/home/ccscw/2022" target="_blank">ChineseCSCW</a>
     |
