--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -252,9 +252,9 @@
 <!-- Neural network - C--> 
     <a href="http://www.iconip2023.org/index.html" target="_blank">ICONIP</a>
     |
-    <a href="https://ksem22.smart-conf.net/submission.html" target="_blank">KSEM</a>
+    <a href="http://43.155.60.36/" target="_blank">KSEM</a>
     |
-    <a href="https://2023.eswc-conferences.org/call-for-contributions-eswc-2023/" target="_blank">ESWC</a> (<a href="" target="_blank">GeoLD2022</a>)
+    <a href="https://2023.eswc-conferences.org/call-for-contributions-eswc-2023/" target="_blank">ESWC</a>
     |
     <a href="https://pricai.org/2023/" target="_blank">PRICAI</a>
     |   
