--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -2088,6 +2088,9 @@ Database Field：
     |
     <a href="https://www1.se.cuhk.edu.hk/~swang/" target="_blank">Sibo Wang</a>
     |
+<!-- The Hong Kong University of Science and Technology (Guangzhou) -->
+    <a href="https://sites.google.com/view/jtang" target="_blank">Jing Tang</a>
+    |
 <!--  Beijing Institute of Technology -->
     <a href="https://ronghuali.github.io/" target="_blank">Ronghua Li</a>
     |        
