--- a/pages/activities.html
+++ b/pages/activities.html
@@ -201,6 +201,8 @@
     <li><strong>Invited Reviewer</strong>, Data and Information Management (<a href="https://www.journals.elsevier.com/data-and-information-management"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
 
 
+    <li><strong>Invited Reviewer</strong>, Data Intelligence (<a href="https://direct.mit.edu/dint"><strong><u><font color="#874e26">DIM</font></u></strong></a>)</li>
+
 
     <!-- \item {计算机研究与发展}  -->
     <li><strong>Invited Reviewer</strong>, Journal of Computer Research and Development (<a href="https://crad.ict.ac.cn/CN/1000-1239/home.shtml"><strong><u><font color="#874e26">JCRD</font></u></strong></a>)</li>
