--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -309,7 +309,9 @@
     <a href="https://mp.weixin.qq.com/s/a8zNkwWD2Pu9wJ_2hB1qyQ" target="_blank">Nature发布2023年值得关注的9个科学大事件，新型疫苗位列榜首</a>
     |
     <a href="https://mp.weixin.qq.com/s/kepm89fMdy4ALKsuMHq-lw" target="_blank">回顾2022，那些令人印象深刻的AI突破</a>
-    |  
+    |
+    <a href="https://zhuanlan.zhihu.com/p/596730259?utm_campaign=shareopn&utm_medium=social&utm_oi=1057776824595087360&utm_psn=1594372411377549312&utm_source=wechat_session&s_r=0" target="_blank">吴恩达来信：2023人工智能热点展望</a>
+    |    
 </br>
 </br>
 Code Understanding: 
