--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -278,6 +278,9 @@
 <!-- others -->
     <a href="https://www.icwsm.org/2023/index.html/index.html#intro" target="_blank">ICWSM</a>
     |
+<!-- Web-based Learning -->
+    <a href="#" target="_blank">ICWL</a>
+    |
 <!-- software engineering - others -->
     <a href="https://conferences.computer.org/sse/2023/cfp/" target="_blank">SSE</a>
     |
@@ -493,6 +496,9 @@ Code Understanding:
     <a href="https://conf.ccf.org.cn/web/api/m9644563065535242241649985902214.action" target="_blank">ChinaService</a>
     |
     <a href="https://conf.scholat.com/home/ccscw/2022" target="_blank">ChineseCSCW</a>
+    |
+<!-- Web-based Learning -->
+    <a href="https://www.icwl-sete.eu/icwl.html" target="_blank">ICWL</a>
     |
     <a href="https://ccbr99.cn/cfp.html?c=cfp" target="_blank">CCBR</a>
     |
@@ -2161,6 +2167,9 @@ Complex Networks Field：
   <br />
 Visual Analytics Field:
 <br />
+<!-- HKUST, under supervision of Prof. Huamin Qu.  -->
+    <a href="http://www.huamin.org/" target="_blank">Huamin Qu [<a href="http://vis.cse.ust.hk/" target="_blank">VisLab</a>] </a>
+    |
     <a href="http://www.cad.zju.edu.cn/home/chenwei/" target="_blank">Wei Chen</a>
     |
 <!-- Peking University -->
