--- a/pages/activities.html
+++ b/pages/activities.html
@@ -67,6 +67,9 @@
     border-left: 5px solid #0084f2;">Program Committee</h3>
 <ul>
 
+    <li><strong>PC member</strong>, The 28th International Conference on Database Systems for Advanced Applications (<a href="http://www.tjudb.cn/dasfaa2023/"><strong><u><font color="#874e26">DASFAA 2023</font></u></strong></a>), Tianjin, China, April 17-20, 2023</li>
+
+    
     <li><strong>PC member</strong>, The 21st China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2022/index.html"><strong><u><font color="#874e26">CCL 2022</font></u></strong></a>), Nanchang, China, October 14-16, 2022</li>
 
 
